* fix coin card styling * fix grid spacing

--- a/src/App.sass
+++ b/src/App.sass
@@ -23,7 +23,7 @@
     display: grid
     grid:
       template-columns: 290px
-      column-gap: 60px
+      column-gap: 68px
       row-gap: 52px
 
     @each $breakpoint, $columns in $grid-templates
