--- a/src/components/CoinStatus.sass
+++ b/src/components/CoinStatus.sass
@@ -6,6 +6,5 @@
   justify-content: flex-end
   padding: .5rem
   text-transform: capitalize
-  background: $block
   > :first-child
     margin-right: 7px
